--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1631513343747536&version=v2.0";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
     <script>
      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -126,7 +134,7 @@
         <div id="tree-container"></div>
         <div id="share-div">
           <button type="button" class="btn btn-primary btn-lg" onClick="AE.share()">
-            Share this tree
+            Save this tree
           </button>
         </div>
       </div>
@@ -137,14 +145,14 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h3 class="modal-title" id="myModalLabel">Share The Tree</h3>
+              <h3 class="modal-title" id="myModalLabel">Here is your link:</h3>
             </div>
             <div class="modal-body">
-              Here is your link:
               </br>
               <a id="shareLink" data-bind="text: link, attr: { href:link }"></a><button type="button" class="btn-small" onClick="AE.copyLink()">Copy</button>
             </div>
             <div class="modal-footer">
+              <button type="button" class="btn" onClick="AE.fbShare()">Share it on Facebook</button>
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
           </div>
