--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
 
       <div class ="left">
-        <div class="navbar navbar-default" role="navigation">
+        <div id= "nabvarup" class="navbar navbar-default" role="navigation">
           <div class="menu-items">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -120,6 +120,8 @@
             </div>
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a target="_blank" data-bind="visible: isLoggedIn()" onClick="AE.createPlaylist()">Create Playlist</a></li>
+                <li class="active"><a target="_blank" data-bind="visible: !isLoggedIn()"  onClick="AE.login()">Login</a></li>
                 <li class="active"><a target="_blank" href="https://github.com/fsahin/artist-explorer">See the code</a></li>
               </ul>
             </div>
@@ -172,6 +174,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.12/d3.min.js"></script>
   <script src="js/dndTree.js"></script>
+  <script src="js/oauth-manager.js"></script>
+  <script src="js/oauth-config.js"></script>
   <script src="js/main.js"></script>
   <script src="js/audioPlayer.js"></script>
 </html>
