--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a target="_blank" data-bind="visible: isLoggedIn()" onClick="AE.createPlaylist()">Create Playlist</a></li>
+                <li class="active"><a target="_blank" data-bind="visible: isLoggedIn()" onClick="AE.createPlaylistModal()">Create Playlist</a></li>
                 <li class="active"><a target="_blank" data-bind="visible: !isLoggedIn()"  onClick="AE.login()">Login</a></li>
                 <li class="active"><a target="_blank" href="https://github.com/fsahin/artist-explorer">See the code</a></li>
               </ul>
@@ -160,6 +160,44 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-facebook" onclick="AE.fbShare()">Share</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Create Playlist Modal -->
+      <div class="modal fade" id="createPlaylistModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="exampleModalLabel">Playlist Details</h4>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div id="playlist-name-form-group" class="form-group">
+                  <label for="playlist-name" class="control-label">Playlist Name:</label>
+                  <input type="text" id="text-playlist-name" class="form-control" id="playlist-name" placeholder="Enter Playlist Name">
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" onClick="AE.createPlaylist()">Create</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Playlist Created Modal -->
+      <div class="modal fade" id="playlistCreatedModal" tabindex="-1" role="dialog" aria-labelledby="smallModal" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+          <div class="modal-content">
+            <div class="modal-body">
+              <h3>Playlist Created!</h3>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
             </div>
           </div>
         </div>
