--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta property="og:title" content="Artist Explorer is a music discovery tool to to explore artists and music by browsing artists through a relationship tree">
 
     <link rel="stylesheet" href="css/jquery-ui.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link href="https://sp-bootstrap.global.ssl.fastly.net/5.0.2/sp-bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -147,7 +148,7 @@
         </div>
         <div id="tree-container"></div>
         <div id="share-div">
-          <button type="button" class="btn btn-primary btn-lg" onClick="AE.share()">
+          <button type="button" class="btn btn-primary" onClick="AE.share()">
             Share this tree
           </button>
         </div>
@@ -158,7 +159,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <button type="button" class="close btn-sm" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h3 class="modal-title" id="myModalLabel">Here is your link:</h3>
               <a id="shareLink" data-bind="text: link, attr: { href:link }"></a>
               <div class="share-warning">
@@ -167,8 +168,8 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-facebook" onclick="AE.fbShare()">Share</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-facebook btn-sm" onclick="AE.fbShare()">Share</button>
+                <button type="button" class="btn btn-sm" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
@@ -191,8 +192,8 @@
               </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary" onClick="AE.createPlaylist()">Create</button>
+              <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary btn-sm" onClick="AE.createPlaylist()">Create</button>
             </div>
           </div>
         </div>
