--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
         <div id="tree-container"></div>
         <div id="share-div">
-          <button type="button" class="btn btn-primary" onClick="AE.share()">
+          <button type="button" class="btn btn-primary btn-sm" onClick="AE.share()">
             Share this tree
           </button>
         </div>
@@ -200,6 +200,24 @@
         </div>
       </div>
 
+      <!-- Not logged in Modal -->
+       <div class="modal fade" id="notLoggedInModal" tabindex="-1" role="dialog" aria-labelledby="smallModal" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title warning" id="exampleModalLabel">Error</h4>
+            </div>
+            <div class="modal-body">
+              Please Log In First
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary btn-sm" data-dismiss="modal">OK</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- Playlist Created Modal -->
       <div class="modal fade" id="playlistCreatedModal" tabindex="-1" role="dialog" aria-labelledby="smallModal" aria-hidden="true">
         <div class="modal-dialog modal-sm">
@@ -208,7 +226,7 @@
               <h3>Playlist Created!</h3>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+              <button type="button" class="btn btn-primary btn-sm" data-dismiss="modal">OK</button>
             </div>
           </div>
         </div>
