--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <nav id="navbarup" class="navbar navbar-default navbar-static-top navbar-transparent-25" role="navigation">
           <div class="container">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -123,6 +123,7 @@
             <!-- Collect the nav links, forms, and other content for toggling on mobile -->
             <div class="collapse navbar-collapse" id="navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
+                <li><a target="_blank" href="https://github.com/fsahin/artist-explorer">See the code</a></li>
                 <li><a  href="#" data-bind="visible: !isLoggedIn()" onClick="AE.login()">Login</a></li>
                 <li class="dropdown" data-bind="visible: isLoggedIn()">
                   <img class="profile-image" data-bind="attr:{src: userImage}"/>
