No transparent navbar

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
 
       <div class ="left">
-        <nav id="navbarup" class="navbar navbar-default navbar-static-top navbar-transparent-25" role="navigation">
+        <nav id="navbarup" class="navbar navbar-default navbar-static-top" role="navigation">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
