--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="">
                 <span class="navbar-logo"></span>
                 <span class="navbar-title">Artist Explorer</span>
               </a>
