Navbar height 60px

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta property="og:image" content="https://artistexplorer.spotify.com/img/artistexplorer.png">
     <meta property="og:site_name" content="Artist Explorer">
     <meta property="og:title" content="Artist Explorer is a music discovery tool to to explore artists and music by browsing artists through a relationship tree">
-
     <link rel="stylesheet" href="css/jquery-ui.min.css">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link href="https://sp-bootstrap.global.ssl.fastly.net/5.0.2/sp-bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/sp-bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
