put see the code on navbar as well

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
 
             <!-- Collect the nav links, forms, and other content for toggling on mobile -->
             <div class="collapse navbar-collapse" id="navbar-collapse-1">
+              <ul class="nav navbar-nav navbar-left">
+                <li><a href="#">See the code</a></li>
+              </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li><a  href="#" data-bind="visible: !isLoggedIn()" onClick="AE.login()">Log In</a></li>
                 <li class="dropdown" data-bind="visible: isLoggedIn()">
