Add the link to see the code on navbar

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <!-- Collect the nav links, forms, and other content for toggling on mobile -->
             <div class="collapse navbar-collapse" id="navbar-collapse-1">
               <ul class="nav navbar-nav navbar-left">
-                <li><a href="#">See the code</a></li>
+                <li><a target="_blank" href="https://github.com/fsahin/artist-explorer">See the code</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li><a  href="#" data-bind="visible: !isLoggedIn()" onClick="AE.login()">Log In</a></li>
