html binding to biography in order to reuse the graph html :)

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
           <div data-bind="visible: bioExists" id="bigoraphyDiv">
             <h4 id ="biography-label">Biography</h4>
-            <p data-bind="text: biography" id="biography"> </p>
+            <p data-bind="html: biography" id="biography"> </p>
           </div>
         </div>
       </div>
