When clicked play button, play without waiting for a timeout

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <tbody>
               <tr>
                 <td class="tl-play">
-                  <button data-bind="css: {'spoticon-play-16': !isPlaying(), 'spoticon-spotify-connect-16': isPlaying()}, click: $parent.playTrack" class="astext"></button>
+                  <button data-bind="css: {'spoticon-play-16': !isPlaying(), 'spoticon-spotify-connect-16': isPlaying()}, click: $parent.playTrackWithoutGap" class="astext"></button>
                 </td>
                 <td class="tl-save">
                   <button type="button" data-bind="css: {'spoticon-plus-16': !isSaved(), 'spoticon-check-16': isSaved()}, click: $parent.saveTrack", class="astext"></button>
