Move create playlist button to bottom left

--- a/index.html
+++ b/index.html
@@ -147,7 +147,6 @@
                     <li><a href="#" onClick="AE.logout()">Log Out</a></li>
                   </ul>
                 </li>
-                <li><a href="#" class="btn btn-primary navbar-btn" onClick="AE.createPlaylistModal()">Create Playlist</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container -->
@@ -162,6 +161,11 @@
           </form>
         </div>
         <div id="tree-container"></div>
+          <div id="share-div">    
+           <button type="button" class="btn btn-primary btn-sm" onClick="AE.createPlaylistModal()">    
+             Create Playlist
+           </button>   
+         </div>
       </div>
 
       <!-- Create Playlist Modal -->
