--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
             <li>Hover over an artist to hear a sample of their music.</li>
             <li>Enter an artist name or a genre and explore relationships between over 2,000,000 artists on Spotify.</li>
             <li>Log In and press "Create Playlist" button to create a random playlist of top tracks of all the artists that are visible in the relationship tree</li>
+            <li>Press the save button next to a track on the right side bar to save the track to your Artist Explorer Playlist</li>
           </ul>
           <h4>Info</h4>
-          Artist Explorer displays data from two great music APIs: <a target="_blank" href="https://developer.spotify.com/web-api/">the Spotify Web API </a> and <a target="_blank" href="http://developer.echonest.com/docs/v4">the Echo Nest API </a>
+          Artist Explorer displays data from <a target="_blank" href="https://developer.spotify.com/web-api/">the Spotify Web API </a>
 
           <a target="_blank" href="https://github.com/fsahin/artist-explorer">
             <div id= "see-the-code">
