Added back support for genres to the app
I reused the list template for an artist genres below the popularity widget.

Each genre list item now has two links.
1) The link which selects the genre within the app and loads related artists
2) A new link which is a spotify icon which will opens up spotify web app with the genre as a search term

Additional work
Spotipy needed to be upgraded a minor version to expose the recommendations method ( see requirements.txt )

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   <button type="button" data-bind="css: {'spoticon-plus-16': !isSaved(), 'spoticon-check-16': isSaved()}, click: $parent.saveTrack", class="astext"></button>
                 </td>
                 <td class="wrapp" data-bind="event: { mouseover: $parent.playTrack, mouseout: $parent.playTrackCancel }">
-                  <a target="_blank" data-bind="text: name, attr: { href:spotifyLink }"> </a>
+                  <a target="_blank" data-bind="text: name, attr: { href:spotifyLink }"></a>
                 </td>
               </tr>
             </tbody>
@@ -108,6 +108,7 @@
             <ul data-bind="foreach: genres" id="mainGenres">
               <li>
                 <a data-bind="text: titleCaseName, click: $parent.switchToGenre"></a>
+                <a target="_blank" data-bind="attr: { href:spotifyLink }" class="spoticon-spotify-icon-16"></a>
               </li>
             </ul>
           </div>
